fix(UI): Tbtc “check it out” button to be full-width on mobile

--- a/src/css/info.scss
+++ b/src/css/info.scss
@@ -116,7 +116,7 @@
       color: $grey-60;
     }
 
-    a.button {
+    a.btn {
       min-width: 100%;
     }
 
@@ -175,7 +175,7 @@
         padding-right: 40px;
       }
 
-      a.button {
+      a.btn {
         min-width: 0;
       }
 
